deleted text-align from ul and ol selectors to stop them fron contradicting themselves as div already have that attribute, deleted width from all <img> as centerImage class already have width defined and I deleted duplicate of centerImage class from all imgs

--- a/style.css
+++ b/style.css
@@ -13,13 +13,11 @@
 
 ul{
   display: inline-block;
-  text-align: center;
   padding: 0;
 }
 
 ol{
   display: inline-block;
-  text-align: center;
   padding: 0;
 }
 
